package pl.sportaihub.enums;

public enum MemberSpecialization {
    FOOTBALL_ANALYTICS,
    COMPUTER_VISION,
    DATA_ENGINEERING,
    MACHINE_LEARNING,
    BIOMECHANICS,
    OTHER
}