package pl.sportaihub.enums;

public enum ProjectStatus {
    PLANNED,
    ACTIVE,
    DONE
}