package pl.sportaihub.enums;

public enum TaskStatus {
    TODO,
    IN_PROGRESS,
    DONE
}